--- a/src/app/components/modal-details/modal-details.component.html
+++ b/src/app/components/modal-details/modal-details.component.html
@@ -2,7 +2,7 @@
 
     <div class="header-modal" style="text-align: center;">
       <img class="example-header-image"
-      src="{{patient.picture.large}}" alt="patient logo" style="justify-content: center; width: 50%;">
+      src="{{patient.picture.large}}" alt="patient logo" style="justify-content: center; width: 200px;">
     </div>  
 
 <table class="example-full-width" cellspacing="0"><tr>
