feat: add picture in table

--- a/src/app/components/modal-details/modal-details.component.html
+++ b/src/app/components/modal-details/modal-details.component.html
@@ -1,4 +1,4 @@
-  <h1 mat-dialog-title>Patient details</h1>
+  <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" mat-dialog-title>Patient details</h1>
 
     <div class="header-modal" style="text-align: center;">
       <img class="example-header-image"
