--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 
-      <h4 class="" style="text-align: center; padding-top: 20px;"> Patient data of Pharma Inc.</h4>
+      <h2 class="" style="text-align: center; padding-top: 20px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> Patient data of Pharma Inc.</h2>
      
       <div style="text-align: start;">
       <mat-form-field appearance="outline" class="example-full-width" > 
@@ -9,7 +9,7 @@
       </mat-form-field>
       </div>
 
-      <table mat-table [dataSource]="dataSource" 
+      <table mat-table [dataSource]="dataSource"
             matSort matSortActivate="created" matSortDisableClear matSortDirection="desc">
             <ng-container matColumnDef="picture">
               <th mat-header-cell *matHeaderCellDef>  </th>
@@ -22,7 +22,7 @@
               {{element.name.title}} {{element.name.first}} {{element.name.last}} </td>
           </ng-container>
           <ng-container matColumnDef="gender">
-            <th mat-header-cell *matHeaderCellDef> Gender </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header="gender"> Gender </th>
             <td mat-cell *matCellDef="let element "> {{element.gender}} </td>
           </ng-container>
         
