--- a/src/app/components/modal-details/modal-details.component.html
+++ b/src/app/components/modal-details/modal-details.component.html
@@ -68,5 +68,5 @@
 </table>
 
   <div mat-dialog-actions   style="justify-content: end; padding-right: 1%;">
-      <button mat-raised-button color="accent" (click)="closeDialog()">Back</button>
+      <button mat-raised-button color="accent" disabled (click)="closeDialog()">Back</button>
   </div>
