--- a/src/app/components/modal-details/modal-details.component.html
+++ b/src/app/components/modal-details/modal-details.component.html
@@ -1,8 +1,8 @@
-  <h1 mat-dialog-title>Patient details</h1>
+  <h1 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" mat-dialog-title>Patient details</h1>
 
     <div class="header-modal" style="text-align: center;">
       <img class="example-header-image"
-      src="{{patient.picture.large}}" alt="patient logo" style="justify-content: center; width: 50%;">
+      src="{{patient.picture.large}}" alt="patient logo" style="justify-content: center; width: 200px;">
     </div>  
 
 <table class="example-full-width" cellspacing="0"><tr>
@@ -68,5 +68,5 @@
 </table>
 
   <div mat-dialog-actions   style="justify-content: end; padding-right: 1%;">
-      <button mat-raised-button color="accent" (click)="closeDialog()">Back</button>
+      <button mat-raised-button color="accent" disabled (click)="closeDialog()">Back</button>
   </div>
